--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 		<div id="board"></div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
 		<script>
+			
+			/* LikeCarousel (c) 2019 Simone P.M. github.com/simonepm - Licensed MIT */
 
 			class Carousel {
 				
